Ejercicios clase desbordamiento y fondos 28 agosto

--- a/desbordamiento.html
+++ b/desbordamiento.html
@@ -9,12 +9,22 @@
 </head>
 <body>
     <div class="desbordamiento">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis expedita explicabo, porro sapiente officia dolorum suscipit animi molestias ut alias nemo vel excepturi adipisci quidem necessitatibus molestiae nam unde provident.
-        Laboriosam hic doloremque facilis provident assumenda explicabo odit repudiandae temporibus dolorem magni eum reiciendis, at ipsa officia asperiores iste iusto natus sint beatae ipsum tenetur eaque iure repellendus? Labore, voluptate?
-        Ducimus labore iure enim magni quibusdam! Libero, vitae perferendis dicta fuga eaque sequi hic consectetur ipsam aliquam ab enim rerum eveniet rem labore provident est nemo dolores molestiae repudiandae quasi.</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis expedita explicabo, porro sapiente officia dolorum suscipit animi molestias ut alias nemo vel excepturi adipisci quidem necessitatibus molestiae nam unde provident.
             Laboriosam hic doloremque facilis provident assumenda explicabo odit repudiandae temporibus dolorem magni eum reiciendis, at ipsa officia asperiores iste iusto natus sint beatae ipsum tenetur eaque iure repellendus? Labore, voluptate?
             Ducimus labore iure enim magni quibusdam! Libero, vitae perferendis dicta fuga eaque sequi hic consectetur ipsam aliquam ab enim rerum eveniet rem labore provident est nemo dolores molestiae repudiandae quasi.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis expedita explicabo, porro sapiente officia dolorum suscipit animi molestias ut alias nemo vel excepturi adipisci quidem necessitatibus molestiae nam unde provident.
+            Laboriosam hic doloremque facilis provident assumenda explicabo odit repudiandae temporibus dolorem magni eum reiciendis, at ipsa officia asperiores iste iusto natus sint beatae ipsum tenetur eaque iure repellendus? Labore, voluptate?
+            Ducimus labore iure enim magni quibusdam! Libero, vitae perferendis dicta fuga eaque sequi hic consectetur ipsam aliquam ab enim rerum eveniet rem labore provident est nemo dolores molestiae repudiandae quasi.</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium et, ipsa, ratione vero ea vitae sed libero ut, quo voluptatum cupiditate est? Nesciunt facere quasi necessitatibus enim quibusdam vel sit.</p>
+    </div>
+    <br>
+    <hr>
+    <div class="despliegue">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum distinctio similique mollitia, est laudantium officia dolor. Pariatur, fugit explicabo nisi fuga maiores exercitationem esse, numquam perspiciatis quaerat rem saepe tenetur.
+        Impedit, blanditiis! Accusantium eveniet corporis adipisci excepturi ipsam, fugiat quam neque dignissimos laboriosam architecto vero fuga aperiam optio possimus tenetur, nobis dolorum voluptatum maiores eos? Ad minus facere sed expedita.
+        Molestiae assumenda deserunt, ullam consequuntur magnam asperiores corrupti ad id perferendis dicta minus nesciunt vel neque. Delectus nostrum alias beatae quod quas eos cumque aperiam temporibus. Minus exercitationem assumenda eligendi?
+        Officia atque neque veniam obcaecati veritatis impedit, nam possimus ut modi exercitationem perferendis quos iure tempora mollitia. Quasi minima ratione est neque mollitia, vitae eaque aut omnis nesciunt quas! Adipisci?
+        Cupiditate provident nesciunt excepturi expedita, consequuntur est corrupti id delectus quam sequi aut dolore consectetur impedit nulla sunt numquam. Adipisci eligendi eum enim. Facilis voluptates possimus commodi excepturi, blanditiis ab.</p>
     </div>
 </body>
 </html>
